--- a/styles.css/buttons.css
+++ b/styles.css/buttons.css
@@ -42,7 +42,7 @@
     font-size: 1.125rem;
 }
 
-.btn[aria-label] {
+.btn[aria-label] {  /* Faz o recorte do texto para criar o fundo degrade */
     position: relative;
 
     &::before {
