--- a/styles.css/index.css
+++ b/styles.css/index.css
@@ -8,3 +8,4 @@
 @import url(about.css);
 @import url(cards.css);
 @import url(features.css) (width >= 80rem); /* Regra para a chamada */
+@import url(pricing.css);
